[package]
name = "mce"
version = "0.0.3"

edition = "2024"
# Rust 1.88.0+ is required by mce-lib.
rust-version = "1.88.0"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Markdown Code Extractor: Collect code blocks from your README.md (or another Markdown file). Optional filtering. Add optional prefix and suffix to each code block, as well as the overall output. Example: use with no-panic"

categories = ["development-tools", "development-tools::testing", "rust-patterns"]

keywords = ["extract", "readme", "macro", "macros", "panic"]

repository = "https://github.com/prudent-rs/mce"
homepage = "https://github.com/prudent-rs/mce"

[lints.rust]
unexpected_cfgs = { level = "forbid"}
unknown_lints = { level = "forbid"}

[dependencies]
# EXACT VERSION with = prefix
mce-proc = {version="= 0.0.3", path="../mce-proc"}

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
